--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <!-- External CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet"/>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,6 +17,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -35,21 +35,23 @@
     </nav>
 
     <!-- Header-->
-    <header>
-      <div class="image">
+    <header class="profile-header">
+      <div class="user-image">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
-      <div class="name">
+      <div class="user-name">
           <h2><b>Ahmed</b> Hashi</h2>
       </div>
     </header>
 
     <!-- Page-specific (main) content here -->
+
+    <main class="main-container">
+
+      <!--HTML for creating new tweet-->
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form action="/tweets/" method="POST">
-        <!-- <label for="tweet-text">What are you humming about?</label> -->
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div>
           <button type="submit">Tweet</button>
@@ -57,3 +59,32 @@
         </div>
       </form>
     </section>
+
+    <!--HTML for displaying created tweets-->
+    <section class="tweet-container">
+      <article class="tweet">
+        <header class="tweet-header">
+          <div class="user-profile">
+            <img class="user-icon" src="/images/Newton.png"> 
+            <h4 class="user-name">Newton</h4>
+          </div>
+          <div>
+            <h4 class="user-handle">@SirIsaac</h4>
+          </div>
+        </header>
+        <div class="tweet-text">
+          If I have seen further it is by standing on the shoulders of giants
+        </div>
+        <footer class="tweet-footer">
+          <span class="tweet-date">10 days ago</span>
+          <div class="tweet-response">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+    </section>
+</main>
+  </body>
+  </html>
