--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
@@ -52,6 +53,7 @@
       <!--HTML for creating new tweet-->
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
+      <form action="/tweets" method="POST">
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div>
           <button type="submit">Tweet</button>
@@ -60,31 +62,8 @@
       </form>
     </section>
 
-    <!--HTML for displaying created tweets-->
-    <section class="tweet-container">
-      <article class="tweet">
-        <header class="tweet-header">
-          <div class="user-profile">
-            <img class="user-icon" src="/images/Newton.png"> 
-            <h4 class="user-name">Newton</h4>
-          </div>
-          <div>
-            <h4 class="user-handle">@SirIsaac</h4>
-          </div>
-        </header>
-        <div class="tweet-text">
-          If I have seen further it is by standing on the shoulders of giants
-        </div>
-        <footer class="tweet-footer">
-          <span class="tweet-date">10 days ago</span>
-          <div class="tweet-response">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-    </section>
+    <!--HTML for displaying created tweets, rendered in client.js-->
+    <section id="tweets-container"></section>
 </main>
   </body>
   </html>
